[package]
name = "neuracle_collect"
version = "0.1.0"
edition = "2021"
authors = ["markov_wang@outlook.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30.1"
kafka = "0.8.0"
toml = "0.5.8"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"